# ddnet_physics_c

./: CMakeLists.txt
.github/workflows/: build.yml
ddnet_physics_py/: .gitignore  pyproject.toml  pyrightconfig.json  requirements.txt  sample.py
ddnet_physics_py/ddnet_physics/: __init__.py  cbindings.py  collision.py  gamecore.py  simd.py
ddnet_physics_py/tests/: basic_test.py
examples/simple_tick/: Makefile  README.md  simple_tick.c
include/ddnet_physics/: collision.h
src/: collision.c
